kubernetes/Envoy/wishlist-contour.yaml
# Wishlist deployment yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: wishlist-deployment
  labels:
    app: wishlist
spec:
  replicas: 3 #We always want more than 1 replica for HA
  selector:
    matchLabels:
      app: wishlist
  template:
    metadata:
      labels:
        app: wishlist
    spec:
      containers:
      - name: wishlist #1st container
        image: karthequian/wishlist:1.0 #Dockerhub image
        ports:
        - containerPort: 8080 #Exposes the port 8080 of the container
      - name: catalog #2nd container
        image: karthequian/wishlist-catalog:1.0
        ports:
        - containerPort: 8081
      - name: auth #3rd container
        image: karthequian/wishlist-auth:1.0
        ports:
        - containerPort: 8082
---
kind: Service
apiVersion: v1
metadata:
  name: wishlist-service
  labels:
    app: wishlist-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: wishlist
  ports:
  - name: wishlist-port
    protocol: TCP
    port: 8080
  - name: wishlist-auth-port
    protocol: TCP
    port: 8082
  - name: wishlist-catalog-port
    protocol: TCP
    port: 8081
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: wishlist-service
spec:
  rules:
  - host:
    http:
      paths:
      - path: /wishlist
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port: 
              number: 8080
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port: 
              number: 8081
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: wishlist-service
            port: 
              number: 8082
